--- a/static/zoomstyle.css
+++ b/static/zoomstyle.css
@@ -12,13 +12,8 @@ body, html {
   justify-content: center;
   align-items: center;
   transition: transform 1s ease-in-out;
-  /* Center the zoomed content */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .zoomed {
-  transform: translate(-50%, -50%) scale(2);
+  transform: scale(2);
 }
