--- a/static/assets/styles/theme/catppuccin/frappe.css
+++ b/static/assets/styles/theme/catppuccin/frappe.css
@@ -65,7 +65,13 @@ p {
     text-shadow: 5px 5px 5px var(--text-glow);
     animation: paragraphTween 1.2s ease-in-out forwards;
 }
-  
+
+.glow-text {
+  font-size: 20px; /* Adjust the font size as needed */
+  color: #fff; /* Text color */
+  text-shadow: 0 0 10px #00f, 0 0 20px #0ff, 0 0 30px #0f0, 0 0 40px #ff0, 0 0 50px #f00, 0 0 60px #f0f, 0 0 70px #0ff; /* Glow effect */
+}
+
 .linkp a {
     font-size: 20px;
     text-align: center;
