--- a/static/galactic.css
+++ b/static/galactic.css
@@ -5,32 +5,39 @@ body, html {
   overflow: hidden;
 }
 
-.particles {
+.space {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
-  pointer-events: none;
+  background-color: #000; /* Space background color */
 }
 
-.particle {
+.stars {
   position: absolute;
-  background-color: #fff; /* Particle color */
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  animation: moveParticle linear infinite;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes moveParticle {
+.stars:before {
+  content: '';
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background-color: #fff; /* Star color */
+  animation: shootingStar 5s linear infinite;
+}
+
+@keyframes shootingStar {
   from {
-    transform: translateY(0) translateX(0);
+    transform: translateY(-100%) translateX(0);
+    opacity: 1;
   }
   to {
-    transform: translateY(200%) translateX(200%);
+    transform: translateY(100%) translateX(100vw);
+    opacity: 0;
   }
 }
-
-
